--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+@keyframes popup {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
